--- a/.github/workflows/AutoUpdate.yml
+++ b/.github/workflows/AutoUpdate.yml
@@ -32,7 +32,7 @@ jobs:
       run: npm run build
       
     - name: Install Surge
-      run: npm install surge
+      run: npm install -g surge
       
     - name: Deploy to Surge
       run: surge ./build theshoedepotbyhaseebahmed.surge.sh --token ${{secrets.SURGE_SECRET}}
